--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,6 @@
         </style>
     </head>
     <body>
-        <script src="./js/scripts.js" type="module"></script>
+        <script src="./js/firsttest.js" type="module"></script>
     </body>
 </html>
