--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,6 @@
         </style>
     </head>
     <body>
-        <script src="./blockworld.js" type="module"></script>
+        <script src="./firsttest.js" type="module"></script>
     </body>
 </html>
