--- a/src/blockworld.html
+++ b/src/blockworld.html
@@ -11,9 +11,11 @@
         </style>
     </head>
     <body>
-        <ul>
-            <li><a href="test.html">Test THREEjs</a></li>
-            <li><a href="blockworld.html">Blocks</a></li>
-        </ul>
+        <script src="./blockworld.js" type="module"></script>
+        <canvas id="myCanvas"></canvas>
+        
+            <div style="background-color: white; position: absolute; top: 0px; left: 0px;">
+                <a href="index.html">List page</a>
+            </div>
     </body>
 </html>
