--- a/src/blockworld.html
+++ b/src/blockworld.html
@@ -14,7 +14,7 @@
         <script src="./blockworld.js" type="module"></script>
         <canvas id="myCanvas"></canvas>
         
-            <div style="background-color: white; position: absolute; top: 0px; left: 0px;">
+            <div id="linktree" style="">
                 <a href="index.html">List page</a>
             </div>
     </body>
