Fixing two cameras WIP

--- a/src/blockworld.html
+++ b/src/blockworld.html
@@ -13,9 +13,9 @@
     <body>
         <script src="./blockworld.js" type="module"></script>
         <canvas id="myCanvas"></canvas>
-        
-            <div id="linktree" style="">
-                <a href="index.html">List page</a>
-            </div>
+        <div id="info">
+            <div id="player-position"></div>
+            <div id="camera-position"></div>
+        </div>
     </body>
 </html>
