--- a/src/blockworld.html
+++ b/src/blockworld.html
@@ -16,6 +16,7 @@
         <div id="info">
             <div id="player-position"></div>
             <div id="camera-position"></div>
+            <div id="look-at"></div>
         </div>
     </body>
 </html>
