Collision start WIP

--- a/src/blockworld.html
+++ b/src/blockworld.html
@@ -17,6 +17,7 @@
             <div id="player-position"></div>
             <div id="camera-position"></div>
             <div id="look-at"></div>
+            <div id="collisions"></div>
         </div>
     </body>
 </html>
