--- a/src/blockworld.html
+++ b/src/blockworld.html
@@ -18,6 +18,7 @@
             <div id="camera-position"></div>
             <div id="look-at"></div>
             <div id="collisions"></div>
+            <div id="collisions2"></div>
         </div>
     </body>
 </html>
