--- a/src/blockworld.html
+++ b/src/blockworld.html
@@ -19,6 +19,7 @@
             <div id="look-at"></div>
             <div id="collisions"></div>
             <div id="collisions2"></div>
+            <div id="keypress"></div>
         </div>
     </body>
 </html>
