Re3moving blocks... still not working

--- a/src/blockworld.html
+++ b/src/blockworld.html
@@ -19,7 +19,8 @@
             <div id="look-at"></div>
             <div id="collisions"></div>
             <div id="collisions2"></div>
-            <div id="keypress"></div>
+            <div id="chunk"></div>
+            <div id="block"></div>
         </div>
     </body>
 </html>
